# flowing-data

frontend/: README.md  pubspec.yaml
frontend/test/: api_test.dart
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
proto/: api.proto  tree.proto
scripts/: gen-grpc.bat
server/: Cargo.toml  build.rs
server/src/: lib.rs  server.rs
server/src/api/: tree.rs
